---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: ????
  Info:
    - Add remote interface for blacklisting
    - If editor extentions is installed, new platforms start in cheat mode
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2025. 02. 16
  Info:
    - Mod portal release
---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: 2025. 02. 16
  Info:
    - Log inserted items
    - Require either active cheat mode or editor to enable
    - Add thumbnail
    - Update thumbnail
    - Require an empty cursor
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2025. 02. 17
  Info:
    - Draw the creative mode using luarendering
    - Use util.sprite_load
    - Fix the giga hatch clipping issue
    - Resolve layer issue without touching circuit wires
    - Support opting hubs in and out
    - Check for the construction request section
    - Reach MVP
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2025. 02. 16
  Info:
    - Initial commit